syntax = "proto3";

package shipper;

option go_package = "northwind/proto/shipper";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "typespb.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "northwind";
        version: "1.0";
        description: "Boilerplate code generated by xo-grpc. Modify proto/*.proto files then run 'compile.sh' script on proto directory to change the services interface.";
        contact: {
            name: "xo-grpc - Walter Wanderley";
            url: "https://github.com/walterwanderley/xo-grpc";
        };
    };
};
service Shipper {
    
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/shipper/{shipperID}"
            
        };
    }
    
    rpc Insert(InsertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/shipper"
            body: "*"
            
        };
    }
    
    rpc ShipperByShipperID(ShipperByShipperIDRequest) returns (typespb.Shipper) {
        option (google.api.http) = {
            get: "/v1/shipper/{shipperID}"
            
        };
    }
    
    rpc Update(UpdateRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/v1/shipper/{shipperID}"
            body: "*"
            
        };
    }
    
    rpc Upsert(UpsertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/shipper/upsert"
            body: "*"
            
        };
    }
    
}

message DeleteRequest { 
    int32 shipperID = 1;
}

message InsertRequest { 
    string companyName = 1;
    google.protobuf.StringValue phone = 2;
    int32 shipperID = 3;
}

message ShipperByShipperIDRequest { 
    int32 shipperID = 1;
}

message UpdateRequest { 
    string companyName = 1;
    google.protobuf.StringValue phone = 2;
    // Output only.
    int32 shipperID = 3;
}

message UpsertRequest { 
    string companyName = 1;
    google.protobuf.StringValue phone = 2;
    int32 shipperID = 3;
}
